<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.PlaceAddEditActivity"
    tools:showIn="@layout/activity_place_add">


    <EditText
        android:id="@+id/place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/place"
        android:textColor="@color/Gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/place_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/place_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/place_name"
        android:layout_below="@+id/place_name"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress|textMultiLine"
        android:scrollHorizontally="false"
        android:textColor="@color/Gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/place_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/place_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/place_address"
        android:layout_below="@+id/place_address"
        android:autoLink="phone"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/Gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/place_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/place_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/place_phone"
        android:layout_below="@+id/place_phone"
        android:autoLink="web"
        android:hint="@string/website"
        android:inputType="textUri"
        android:textColor="@color/Gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/place_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/place_website"
        android:hint="@string/memo"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="4"
        android:textColor="@color/Gray"
        android:textSize="20sp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/place_memo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/place_memo"
        android:layout_below="@+id/place_memo">

        <ImageView
            android:id="@+id/place_photo_view"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal|top"
            android:contentDescription="@string/place_photo" />

    </FrameLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>
