<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_height"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/md_keylines"
    android:layout_marginLeft="@dimen/md_keylines"
    android:layout_marginRight="@dimen/md_keylines"
    android:foreground="?attr/selectableItemBackground"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:background="@color/background_material_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.90"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/place_initial"
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_card_height"
            android:background="#bc4242"
            android:gravity="top|center"
            android:hint="@string/initial"
            android:textColor="@android:color/white"
            android:textSize="@dimen/initial_size" />

        <TextView
            android:id="@+id/place_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_title_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginStart="@dimen/md_keylines"
            android:text="@string/item_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/place_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_initial"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/item_desc"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading" />

        <Button
            android:id="@+id/place_delete_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_address"
            android:contentDescription="@string/delete"
            android:text="@string/delete"
            android:textColor="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/add_favorite_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/cards_button_width"
            android:layout_height="@dimen/cards_button_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_below="@id/place_address"
            android:layout_marginEnd="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:contentDescription="@string/add_favorite"
            android:src="@drawable/ic_favorite_black_24dp"
            android:tint="@color/Silver" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
